--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,16 @@
-/* Add CSS Styling */
+.oddNum {
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
+    background-color: lightpink;
+}
+.oddNum.cooler {
+    font-size: 24px;
+}
+#num2 {
+    font-size: 36px;
+    color: blue;
+}
+#num4 {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
