update intro to css

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
 /* Add CSS Styling */
+.btn1,
+.btn2 {
+    font-size: 28px;
+    font-family: 'Times New Roman', Helvetica, serif;
+}
+.btn1 {
+    color: white;
+    background-color: black;
+}
+.btn2 {
+    background-color: yellow;
+}
